perf && test