@@ -25,8 +25,7 @@ public class LockableResourceManagerTest {
     public void validationFailure() throws Exception {
         RequiredResourcesProperty.DescriptorImpl d = new RequiredResourcesProperty.DescriptorImpl();
         LockableResourcesManager.get().createResource("resource1");
-        LockableResource r =
-                LockableResourcesManager.get().getReadOnlyResources().get(0);
+        LockableResource r = LockableResourcesManager.get().getFirst();
         r.setLabels("some-label");
 
         assertEquals(
